--- a/src/app/components/connection-details-panel/connection-details-panel.component.html
+++ b/src/app/components/connection-details-panel/connection-details-panel.component.html
@@ -8,7 +8,7 @@
       <div class="header-parameters-grid">
         <mat-form-field appearance="fill" class="env-select">
           <mat-label>Environment</mat-label>
-          <mat-select formControlName="environment" [disabled]="shouldInputsBeDisabled()" id="mesage-sender-env-select">
+          <mat-select formControlName="environment" id="mesage-sender-env-select">
             @for (item of environments; track $index) {
             <mat-option [value]="item">{{ item }}</mat-option>
             }
@@ -17,8 +17,7 @@
 
         <mat-form-field class="gateway-select">
           <mat-label>Gateway type</mat-label>
-          <mat-select formControlName="gatewayType" [disabled]="shouldInputsBeDisabled()"
-            id="mesage-sender-gateway-select">
+          <mat-select formControlName="gatewayType" id="mesage-sender-gateway-select">
             @for (item of gateways; track $index) {
             <mat-option [value]="item">{{ item }}</mat-option>
             }
@@ -30,8 +29,7 @@
 
         <mat-form-field class="distributor-select">
           <mat-label>Distributor</mat-label>
-          <mat-select formControlName="distributor" [disabled]="shouldDistributorFieldBeDisabled()"
-            id="mesage-sender-distributor-select">
+          <mat-select formControlName="distributor" id="mesage-sender-distributor-select">
             @for (item of distributors; track $index) {
             <mat-option [value]="item">{{ item }}</mat-option>
             }
@@ -69,8 +67,7 @@
       <div class="templates-grid">
         <mat-form-field>
           <mat-label>Select TBKD Template</mat-label>
-          <mat-select formControlName="tbkdTemplate" [disabled]="shouldTemplatesSelectPanelBeDisabled()"
-            id="select-tbkd-select">
+          <mat-select formControlName="tbkdTemplate" id="select-tbkd-select">
             @for (item of TBKDTemplates; track $index) {
             <mat-option [value]="item">{{ item.name }}</mat-option>
             }
@@ -86,8 +83,7 @@
 
         <mat-form-field>
           <mat-label>Select ECNI Template</mat-label>
-          <mat-select formControlName="ecniTemplate" [disabled]="shouldTemplatesSelectPanelBeDisabled()"
-            id="select-ecni-select">
+          <mat-select formControlName="ecniTemplate" id="select-ecni-select">
             @for (item of ECNITemplates; track $index) {
             <mat-option [value]="item">{{ item.name }}</mat-option>
             }
@@ -103,8 +99,7 @@
 
         <mat-form-field>
           <mat-label>MERR error Frequency</mat-label>
-          <mat-select formControlName="errorFrequency" [disabled]="shouldTemplatesSelectPanelBeDisabled()"
-            id="mesage-sender-schedule-select">
+          <mat-select formControlName="errorFrequency" id="mesage-sender-schedule-select">
             @for (item of errorIntervals; track $index) {
             <mat-option [value]="item">{{ formatSelectedErrorFrequency(item) }}</mat-option>
             }
@@ -118,8 +113,7 @@
           @if (messagesStore.errorFrequency() !== 0) {
           <mat-form-field>
             <mat-label>Select Error Template</mat-label>
-            <mat-select formControlName="merrTemplate" [disabled]="shouldTemplatesSelectPanelBeDisabled()"
-              id="select-merr-select">
+            <mat-select formControlName="merrTemplate" id="select-merr-select">
               @for (item of ErrorTemplates; track $index) {
               <mat-option [value]="item">{{ item.name }}</mat-option>
               }
