--- a/src/app/components/editable-fix-table/editable-fix-table.component.html
+++ b/src/app/components/editable-fix-table/editable-fix-table.component.html
@@ -6,29 +6,20 @@
     <td mat-cell *matCellDef="let element; let i = index">
       <ng-container>
         @if (!isEditing(element.rowId)) {
-          <span [ngClass]="element.isTemplateKeyValid ? '' : 'invalid_property'">
-            {{ element.propertyKey }}</span
-          >
+        <span [ngClass]="element.isTemplateKeyValid ? '' : 'invalid_property'">
+          {{ element.propertyKey }}</span>
         } @else {
-          <mat-form-field class="grid-input" appearance="outline">
-            <input
-              matInput
-              [value]="tempEdits().get(element.rowId)?.propertyKey"
-              [matAutocomplete]="auto"
-              type="number"
-              (input)="updateTemp(element.rowId, 'propertyKey', $event); filterFieldOptions($event)"
-            />
-            <mat-autocomplete
-              #auto="matAutocomplete"
-              (optionSelected)="onOptionSelected(element.rowId, $event)"
-            >
-              @for (option of matchingFieldDescriptions(); track option.id) {
-                <mat-option [value]="option.id">{{
-                  option.id + ' - ' + option.description
-                }}</mat-option>
-              }
-            </mat-autocomplete>
-          </mat-form-field>
+        <mat-form-field class="grid-input" appearance="outline">
+          <input matInput [value]="tempEdits().get(element.rowId)?.propertyKey" [matAutocomplete]="auto" type="number"
+            (input)="updateTemp(element.rowId, 'propertyKey', $event); filterFieldOptions($event)" />
+          <mat-autocomplete #auto="matAutocomplete" (optionSelected)="onOptionSelected(element.rowId, $event)">
+            @for (option of matchingFieldDescriptions(); track option.id) {
+            <mat-option [value]="option.id">{{
+              option.id + ' - ' + option.description
+              }}</mat-option>
+            }
+          </mat-autocomplete>
+        </mat-form-field>
         }
       </ng-container>
     </td>
@@ -40,9 +31,9 @@
     <td mat-cell *matCellDef="let element; let i = index">
       <ng-container>
         @if (!isEditing(element.rowId)) {
-          {{ element.description }}
+        {{ element.description }}
         } @else {
-          {{ getTempDescription(element.rowId) }}
+        {{ getTempDescription(element.rowId) }}
         }
       </ng-container>
     </td>
@@ -50,19 +41,16 @@
 
   <!--field name Column -->
   <ng-container matColumnDef="fieldName">
-    <th mat-header-cell *matHeaderCellDef>field Name</th>
+    <th mat-header-cell *matHeaderCellDef>Field Name</th>
     <td mat-cell *matCellDef="let element; let i = index">
       <ng-container>
         @if (!isEditing(element.rowId)) {
-          {{ element.propertyValue }}
+        {{ element.propertyValue }}
         } @else {
-          <mat-form-field class="grid-input" appearance="outline">
-            <input
-              matInput
-              [value]="element.propertyValue"
-              (input)="updateTemp(element.rowId, 'propertyValue', $event)"
-            />
-          </mat-form-field>
+        <mat-form-field class="grid-input" appearance="outline">
+          <input matInput [value]="element.propertyValue"
+            (input)="updateTemp(element.rowId, 'propertyValue', $event)" />
+        </mat-form-field>
         }
       </ng-container>
     </td>
@@ -70,22 +58,32 @@
 
   <!-- Actions Column -->
   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element; let i = index">
-      <ng-container>
+      <div class="actions-container">
         @if (!isEditing(element.rowId)) {
-          <button mat-button (click)="startEdit(element.rowId)">Edit</button>
-          <button class="delete-row-button" mat-button (click)="deleteRow(element)">Delete</button>
-          @if (element.messages.length > 0) {
-            <button [matTooltip]="formatDisplayWarnings(element)" mat-button>Warnings</button>
-          }
+        @if (element.messages.length > 0) {
+        <button [matTooltip]="formatDisplayWarnings(element)" mat-icon-button color="warn">
+          <mat-icon rippleColor="warn">warning</mat-icon>
+        </button>
+        }
+        <button mat-icon-button (click)="startEdit(element.rowId)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button class="delete-row-button" mat-icon-button (click)="deleteRow(element)">
+          <mat-icon>delete</mat-icon>
+        </button>
         }
 
         @if (isEditing(element.rowId)) {
-          <button mat-button color="primary" (click)="saveEdit(element.rowId)">Save</button>
-          <button mat-button color="warn" (click)="cancelEdit(element.rowId)">Cancel</button>
+        <button mat-icon-button color="primary" (click)="saveEdit(element.rowId)">
+          <mat-icon>done</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="cancelEdit(element.rowId)">
+          <mat-icon>close</mat-icon>
+        </button>
         }
-      </ng-container>
+      </div>
     </td>
   </ng-container>
 
