--- a/src/app/components/editable-fix-table/editable-fix-table.component.scss
+++ b/src/app/components/editable-fix-table/editable-fix-table.component.scss
@@ -4,6 +4,85 @@
 
 .grid-input {
   width: 150px;
+
+  // Compacting form fields in table cells
+  :deep(.mat-mdc-text-field-wrapper) {
+    height: 40px;
+    padding: 0 8px;
+  }
+
+  :deep(.mat-mdc-form-field-flex) {
+    height: 40px;
+    align-items: center;
+  }
+
+  :deep(.mat-mdc-form-field-infix) {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    min-height: auto;
+  }
 }
 
+:host {
+  display: block;
 
+  .mat-mdc-table {
+    width: 100%;
+  }
+
+  tr.mat-mdc-header-row {
+    height: 40px;
+  }
+
+  tr.mat-mdc-row {
+    height: 40px;
+  }
+
+  td.mat-mdc-cell,
+  th.mat-mdc-header-cell {
+    padding: 4px 8px;
+  }
+
+  .mat-column-fieldId {
+    width: 60px;
+  }
+
+  .mat-column-description {
+    width: auto;
+    min-width: 150px;
+  }
+
+  .mat-column-fieldName {
+    width: auto;
+    min-width: 150px;
+  }
+
+  .mat-column-actions {
+    width: 120px;
+    text-align: right;
+  }
+
+  .actions-container {
+    display: flex;
+    justify-content: flex-end;
+    gap: 0;
+
+    .mat-mdc-icon-button {
+      width: 32px;
+      height: 32px;
+      padding: 4px;
+
+      .mat-icon {
+        font-size: 18px;
+        width: 18px;
+        height: 18px;
+      }
+    }
+  }
+
+  .mat-mdc-button {
+    line-height: 24px;
+    height: 32px;
+    padding: 0 8px;
+  }
+}
