--- a/src/app/components/connection-details-panel/connection-details-panel.component.html
+++ b/src/app/components/connection-details-panel/connection-details-panel.component.html
@@ -9,7 +9,7 @@
         <mat-form-field appearance="fill" class="env-select">
           <mat-label>Environment</mat-label>
           <mat-select formControlName="environment" id="mesage-sender-env-select">
-            @for (item of environments; track $index) {
+            @for (item of environments(); track $index) {
             <mat-option [value]="item">{{ item }}</mat-option>
             }
           </mat-select>
@@ -29,8 +29,9 @@
 
         <mat-form-field class="distributor-select">
           <mat-label>Distributor</mat-label>
-          <mat-select formControlName="distributor" id="mesage-sender-distributor-select">
-            @for (item of distributors; track $index) {
+          <mat-select formControlName="distributor" id="mesage-sender-distributor-select"
+            [disabled]="distributors().length === 0">
+            @for (item of distributors(); track $index) {
             <mat-option [value]="item">{{ item }}</mat-option>
             }
           </mat-select>
@@ -39,15 +40,16 @@
         <mat-form-field class="provider-select">
           <mat-label>Provider</mat-label>
           @if (!form.controls.useCustomProvider.value) {
-          <mat-select formControlName="provider" id="mesage-sender-distributor-select">
-            @for (item of providers; track $index) {
+          <mat-select formControlName="provider" id="mesage-sender-provider-select"
+            [disabled]="providers().length === 0">
+            @for (item of providers(); track $index) {
             <mat-option [value]="item">{{ item }}</mat-option>
             }
           </mat-select>
           }
 
           @if (form.controls.useCustomProvider.value) {
-          <input formControlName="provider" id="mesage-sender-message-count-input" matInput />
+          <input formControlName="provider" id="mesage-sender-provider-input" matInput />
           }
         </mat-form-field>
 
@@ -58,8 +60,8 @@
         </div>
 
         <div class="connection-states">
-          <p>Distributor: {{ distributorConnectionDetailsState() }}</p>
-          <p>Provider: {{ providerConnectionDetailsState() }}</p>
+          <p>Distributor: {{ distributorConnectionStateLabel() }}</p>
+          <p>Provider: {{ providerConnectionStateLabel() }}</p>
         </div>
       </div>
 
@@ -68,7 +70,7 @@
         <mat-form-field>
           <mat-label>Select TBKD Template</mat-label>
           <mat-select formControlName="tbkdTemplate" id="select-tbkd-select">
-            @for (item of TBKDTemplates; track $index) {
+            @for (item of TBKDTemplates(); track $index) {
             <mat-option [value]="item">{{ item.name }}</mat-option>
             }
             <mat-option class="new-mesage-option" (click)="onCustomTBKDSelectClick()"
@@ -84,7 +86,7 @@
         <mat-form-field>
           <mat-label>Select ECNI Template</mat-label>
           <mat-select formControlName="ecniTemplate" id="select-ecni-select">
-            @for (item of ECNITemplates; track $index) {
+            @for (item of ECNITemplates(); track $index) {
             <mat-option [value]="item">{{ item.name }}</mat-option>
             }
             <mat-option class="new-mesage-option" (click)="onCustomECNISelectClick()"
@@ -114,7 +116,7 @@
           <mat-form-field>
             <mat-label>Select Error Template</mat-label>
             <mat-select formControlName="merrTemplate" id="select-merr-select">
-              @for (item of ErrorTemplates; track $index) {
+              @for (item of ErrorTemplates(); track $index) {
               <mat-option [value]="item">{{ item.name }}</mat-option>
               }
               <mat-option class="new-mesage-option" (click)="onCustomMERRSelectClick()"
