--- a/src/app/components/connection-details-panel/connection-details-panel.component.scss
+++ b/src/app/components/connection-details-panel/connection-details-panel.component.scss
@@ -4,8 +4,8 @@
   .parameters-panel {
     display: flex;
     flex-direction: column;
-    gap: 24px;
     padding-top: 16px;
+    padding-left: 16px;
   }
 
   .header-parameters-grid {
