--- a/src/app/components/message-sender/message-sender.component.scss
+++ b/src/app/components/message-sender/message-sender.component.scss
@@ -32,3 +32,28 @@
 .message-sender-add-new-message-panel {
   padding-bottom: 20px;
 }
+
+.field-with-hint {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  width: 100%;
+
+  mat-form-field {
+    flex: 1;
+  }
+}
+
+.hint-icon {
+  font-size: 18px;
+  width: 18px;
+  height: 18px;
+  flex-shrink: 0;
+  color: rgba(0, 0, 0, 0.4);
+  cursor: help;
+  margin-bottom: 1.25em;
+
+  &:hover {
+    color: #1976d2;
+  }
+}
